fix: Correct tsconfig.json to resolve module path errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    // --- هذا هو الجزء المضاف والمهم ---
+    "paths": {
+      "@/*": ["./*"]
+    },
+    // --- بقية الكود الخاص بك يبقى كما هو ---
     "target": "ES2017",
     "lib": [
       "dom",
